--- a/crop-manager/src/main/resources/application.properties
+++ b/crop-manager/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:h2:mem:AZ
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
+
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
