--- a/yield-manager/src/main/resources/application.properties
+++ b/yield-manager/src/main/resources/application.properties
@@ -2,3 +2,17 @@ spring.application.name=yield-manager
 
 startup.message=no profile actived
 server.port=9090
+
+#spring.cloud.loadbalancer.retry.enabled=true
+
+
+crop-manager.ribbon.eureka.enabled=false
+crop-manager.ribbon.listOfServers=localhost:8081,localhost:8080
+crop-manager.ribbon.ServerListRefreshInterval=15000
+
+#crop-manager.ribbon.retry.enabled=true
+crop-manager.ribbon.MaxAutoRetries=0
+crop-manager.ribbon.MaxAutoRetriesNextServer=1
+crop-manager.ribbon.OkToRetryOnAllOperations=true
+
+
