--- a/crop-manager/src/main/resources/application-dev.properties
+++ b/crop-manager/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ startup.message=Startup (Dev Env)
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.datasource.url=jdbc:mysql://localhost/spring_demo
+spring.datasource.url=jdbc:mysql://localhost/spring_demo?useSSL=false
 spring.datasource.username=potato
 spring.datasource.password=potato123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
