--- a/service-configurer/src/main/resources/application.properties
+++ b/service-configurer/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+server.port=8888
 spring.application.name=service-configurer
 spring.cloud.config.server.git.uri=https://github.com/PotatoWhite/spring-elemenraty-demo/config
 spring.cloud.config.server.git.clone-on-start=true
 
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
