--- a/crop-manager/src/main/resources/bootstrap.properties
+++ b/crop-manager/src/main/resources/bootstrap.properties
@@ -1,2 +1,10 @@
 spring.application.name=crop-manager
-spring.cloud.config.uri=http://localhost:8888
+
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=service-configurer
+spring.cloud.config.uri=http://service-configurer
+
+startup.message=Could not connect config server.
